# manakit

./: .dockerignore  .env.default  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Caddyfile  Dockerfile  Makefile  README.md  REFACTORING_SUMMARY.md  alembic.ini  docker-compose.yml  llms.txt  main.py  pyproject.toml  rxconfig.py  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: README.md  copilot-instructions.md
.github/agents/: 4.1-beast-mode.agent.md  expert-react-frontend-engineer.agent.md  ultimate-transparent-thinking.agent.md
.github/chatmodes/: 4.1-beast-mode.chatmode.md
.github/instructions/: python.instructions.md
.github/prompts/: boost.prompt.md
.github/workflows/: publish_docker_image.yml  publish_libs.yml  publish_to_aca.yml
alembic/: env.py
alembic/versions/: 2025_01_26_d862b1d42d28_add_servers.py  2025_01_28_208ad327e9f4_add_aggregatioin_tables.py  (+13 more)
app/: app.py  configuration.py  roles.py
components/appkit-assistant/: pyproject.toml
components/appkit-assistant/src/appkit_assistant/: configuration.py
components/appkit-assistant/src/appkit_assistant/backend/: models.py  repositories.py  system_prompt.py
components/appkit-assistant/src/appkit_assistant/backend/processors/: ai_models.py  knowledgeai_processor.py  lorem_ipsum_processor.py  openai_chat_completion_processor.py  openai_responses_processor.py  perplexity_processor.py
components/appkit-assistant/src/appkit_assistant/components/: __init__.py  composer.py  mcp_server_dialogs.py  message.py  thread.py  threadlist.py  tools_modal.py
components/appkit-assistant/src/appkit_assistant/state/: mcp_server_state.py  thread_state.py
components/appkit-imagecreator/: pyproject.toml
components/appkit-imagecreator/src/appkit_imagecreator/: pages.py  states.py
components/appkit-imagecreator/src/appkit_imagecreator/components/: canvas.py
components/appkit-mantine/: pyproject.toml
components/appkit-mantine/src/appkit_mantine/: __init__.py  base.py  markdown_preview.py  markdown_preview_wrapper.js  markdown_zoom.py  number_input.py  tiptap.py
components/appkit-ui/: pyproject.toml
components/appkit-ui/src/appkit_ui/components/: form_inputs.py
components/appkit-user/: pyproject.toml
components/appkit-user/src/appkit_user/authentication/: states.py
components/appkit-user/src/appkit_user/authentication/backend/: oauth_service.py  user_repository.py
components/appkit-user/src/appkit_user/authentication/components/: components.py
components/appkit-user/src/appkit_user/user_management/: pages.py
components/appkit-user/src/appkit_user/user_management/states/: profile_states.py
components/manakit-assistant/: pyproject.toml
components/manakit-assistant/docs/: ideas.md
components/manakit-assistant/src/manakit_assistant/: __init__.py  configuration.py
components/manakit-assistant/src/manakit_assistant/backend/: model_manager.py  models.py  processor.py  repositories.py
components/manakit-assistant/src/manakit_assistant/backend/processors/: ai_models.py  knowledgeai_processor.py  lorem_ipsum_processor.py  openai_base.py  openai_chat_completion_processor.py  openai_responses_processor.py  perplexity_processor.py
components/manakit-assistant/src/manakit_assistant/components/: __init__.py  composer.py  mcp_server_dialogs.py  mcp_server_table.py  message.py  thread.py  threadlist.py  tools_modal.py
components/manakit-assistant/src/manakit_assistant/state/: mcp_server_state.py  thread_state.py
components/manakit-commons/: pyproject.toml
components/manakit-commons/src/manakit_commons/: registry.py
components/manakit-commons/src/manakit_commons/configuration/: __init__.py  base.py  configuration.py  logging.py
components/manakit-commons/src/manakit_commons/database/: configuration.py  entities.py  session.py
components/manakit-imagecreator/: pyproject.toml
components/manakit-imagecreator/src/manakit_imagecreator/: configuration.py  pages.py  states.py
components/manakit-imagecreator/src/manakit_imagecreator/backend/: generator_registry.py  models.py
components/manakit-imagecreator/src/manakit_imagecreator/backend/generators/: __init__.py  black_forest_labs.py  google.py  openai.py
components/manakit-imagecreator/src/manakit_imagecreator/components/: canvas.py  options_ui.py  sidebar.py
components/manakit-imagegen/: pyproject.toml
components/manakit-imagegen/src/manakit_imagegen/: pages.py  states.py
components/manakit-imagegen/src/manakit_imagegen/backend/: generator_registry.py  models.py
components/manakit-imagegen/src/manakit_imagegen/backend/generators/: __init__.py  black_forest_labs.py  google.py  openai.py
components/manakit-imagegen/src/manakit_imagegen/components/: canvas.py  options_ui.py  sidebar.py
components/manakit-ui/: pyproject.toml
components/manakit-ui/src/manakit_ui/components/: __init__.py  collabsible.py  dialogs.py  editor.py  form_inputs.py  header.py
components/manakit-user/: pyproject.toml
components/manakit-user/src/manakit_user/: configuration.py
components/manakit-user/src/manakit_user/authentication/: pages.py  states.py  templates.py
components/manakit-user/src/manakit_user/authentication/backend/: entities.py  models.py  oauth_service.py  oauthstate_repository.py  user_repository.py  user_session_repository.py
components/manakit-user/src/manakit_user/authentication/components/: __init__.py  components.py  templates.py
components/manakit-user/src/manakit_user/user_management/: pages.py
components/manakit-user/src/manakit_user/user_management/components/: __init__.py  user.py
components/manakit-user/src/manakit_user/user_management/states/: __init__.py  profile_states.py  user_states.py
configuration/: config.devcontainer.yaml  config.docker_test.yaml  config.local.yaml  config.yaml  logging.yaml
docs/: MANTINE_TIPTAP_GUIDE.md
examples/: examples.py
mantine/: __init__.py  base.py  date.py  inputs.py  masked_input.py  navigation_progress.js  nprogress.py  number_input.py  password_input.py  textarea.py  tiptap.py  tiptap_wrapper.js
reflex_mantine/: reflex_mantine.py
(+92 files in other folders)
