[project]
name = "appkit-assistant"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "appkit-commons",
    "openai>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
appkit-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
