[project]
name = "appkit-mantine"
version = "0.6.0"
description = "Mantine UI input components for Reflex with type safety and comprehensive examples"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = [
    "reflex",
    "mantine",
    "ui",
    "components",
    "input",
    "forms",
    "react",
    "web",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "reflex>=0.8.12",
]

[project.urls]
Homepage = "https://github.com/jenreh/appkit"
Documentation = "https://github.com/jenreh/appkit/tree/main/docs"
Repository = "https://github.com/jenreh/appkit"
Issues = "https://github.com/jenreh/appkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_mantine"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
