[project]
name = "appkit-ui"
version = "0.6.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "appkit-commons",
    "reflex>=0.8.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
appkit-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_ui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
