[project]
name = "appkit-user"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "greenlet>=3.2.4",
    "appkit-commons",
    "appkit-ui",
    "requests_oauthlib>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
appkit-commons = { workspace = true }
appkit-ui = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/appkit_user"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
