[project]
name = "manakit-imagecreator"
version = "0.21.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.26.0",
    "httpx>=0.28.1",
    "manakit-commons",
    "openai>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
manakit-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/manakit_imagecreator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
