[project]
name = "manakit-ui"
version = "0.21.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "manakit-commons",
    "reflex>=0.8.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
manakit-commons = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/manakit_ui"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
