[project]
name = "manakit-user"
version = "0.21.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jens Rehpöhler" }]
requires-python = ">=3.13"
dependencies = [
    "greenlet>=3.2.4",
    "manakit-commons",
    "manakit-ui",
    "requests_oauthlib>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
manakit-commons = { workspace = true }
manakit-ui = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/manakit_user"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
